--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,6 +3,7 @@ version: "3"
 services:
   db:
     image: mysql:8.0
+    container_name: mysql-db
     environment:
       MYSQL_ROOT_PASSWORD: password
       MYSQL_DATABASE: rubyserver_development
@@ -13,20 +14,33 @@ services:
     volumes:
       - dbdata:/var/lib/mysql
 
-  web:
-    build: .
+  rails-backend:
+    build: 
+      context: ./rails-backend
+      dockerfile: Dockerfile
+    container_name: rails-backend
     environment:
       DB_HOST: db
       DB_USERNAME: root
       DB_PASSWORD: password
       RAILS_ENV: development
-    command: bash -c "rm -f tmp/pids/server.pid && rails s -b '0.0.0.0'"
+    command: bash -c "rm -f tmp/pids/server.pid && bundle exec rails s -b '0.0.0.0'"
     volumes:
-      - .:/app
+      - ./rails-backend:/app 
     ports:
-      - "3000:3000"
+      - "3001:3000"
     depends_on:
       - db
-
+  vue-frontend:
+    build:
+      context: ./vue-frontend
+    container_name: vue-frontend
+    volumes:
+      - ./vue-frontend:/app
+      - /app/node_modules
+    ports:
+      - "3000:3000"   # Vite dev 서버는 기본 3000포트
+    depends_on:
+      - rails-backend       # 프론트가 백엔드에 의존 (선택)
 volumes:
   dbdata:
