--- a/vue-frontend/package.json
+++ b/vue-frontend/package.json
@@ -16,6 +16,7 @@
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.2.1",
+    "rollup": "^4.36.0",
     "vite": "^6.2.1",
     "vite-plugin-vue-devtools": "^7.7.2"
   }
